# ReaperServer

./: .gitignore  CMakeLists.txt  ZealReaperServer.cpp  main.cpp  oldmain.cpp
tests/: test_frameio_to_reaper_markers.py  test_reaper_marker_protocol.py
tests/fixtures/: frameio_sample.csv  reaper_expected.csv
tools/: frameio_to_reaper_markers.py  reaper_marker_protocol.py
